Fixed deprecated in ClassParser.createInstanceOfClass. Removed braces from UnitTestGenerator.